# BreakMyBot

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
apps/studio/: package-lock.json  package.json  tailwind.config.ts
apps/studio/app/: globals.css  layout.tsx  page.tsx
apps/studio/app/api/runs/: route.ts
apps/studio/app/api/runtime/: route.ts
apps/studio/components/studio/: report-panel.tsx  studio-workspace.tsx
apps/studio/components/ui/: badge.tsx  button.tsx  input.tsx  textarea.tsx
apps/studio/lib/: provider-client.ts  runner.ts  runtime-config.ts  schema.ts  types.ts
apps/web/: package-lock.json  package.json  tailwind.config.ts  tsconfig.json
apps/web/app/: globals.css  layout.tsx  manifest.ts  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts
apps/web/app/docs/config-format/: page.tsx
apps/web/app/docs/example-run/: page.tsx
apps/web/app/docs/example-usage/: page.tsx
apps/web/app/docs/installation/: page.tsx
apps/web/app/docs/local-studio/: page.tsx
apps/web/app/docs/provider-setup/: page.tsx
apps/web/app/docs/quickstart/: page.tsx
apps/web/components/site/: code-panel.tsx  doc-shell.tsx  site-footer.tsx  site-header.tsx
apps/web/components/ui/: button.tsx
apps/web/lib/: docs.ts  site.ts
cli/breakmybot/: __main__.py  cli.py  config.py  models.py  runtime.py  studio.py
examples/: config.example.yaml
